--- a/web_application/parlock/templates/parcel/register.html
+++ b/web_application/parlock/templates/parcel/register.html
@@ -36,7 +36,7 @@ Register Parcel
 <div class="row justify-content-center" style="background-color:rgb(242, 242, 238);">
     <div class="col-md-7 col-lg-5">
         <div class="wrap">
-            <form method="post" action="/register">
+            <form method="post" action="{% url 'parcel-register' %}">
                 {% csrf_token %}
                 {{form}}
                 <input type="submit" class="form-control btn btn-primary rounded submit px-3" value="Register">
